setting up pipeline and config for github pages per hugo documentation

--- a/hugo.toml
+++ b/hugo.toml
@@ -78,3 +78,8 @@ enableRobotsTXT = true
   [params.author]
     name = "SJW" # Your name as shown in the RSS feed metadata
   #  email = "me@example.com" # Added to the footer so readers can reply to posts                                                               ~                                   
+
+#Hugo Github pages requirement
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
